# voxio-bot

./: .env.example  .gitignore  CACHING_TTS.md  CHANGELOG.md  FILLER_CACHE.md  LICENSE  README.md  Taskfile.yml  VINSTON_PROMPT.md  bot.py  cached_tts.py  config.toml  filler_cache.py  piper_local_tts.py  precache_fillers.py  pyproject.toml  requirements.txt  run.py  run_auth.py  sessions.py  tts_cache.py
sounds/: attribution.txt
static/: index.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_cached_tts.py  test_filler_cache.py  test_tts_cache.py
