[project]
name = "voxio-bot"
version = "0.1.0"
description = "Real-time voice assistant with Claude and ElevenLabs using Pipecat"
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "onnxruntime>=1.23.2",
    "pillow>=11.3.0",
    "pipecat-ai[anthropic,daily,deepgram,elevenlabs,mlx-whisper,runner,silero,webrtc]",
    "piper-tts>=1.3.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]
